--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-# Example .gitignore file for your config dir.
-# A * ensures that everything will be ignored.
-*
 
-# You can whitelist files/folders with !, these will not be ignored.
-!*.yaml
-!.gitignore
-!*.md
+
+*.db
+*.log
 
 # Ignore folders.
 .storage
